--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             <h5>ABOUT</h5>
             <br>
             <img src="images/uniform.jpg" class="uniform">
-
             <div class="about-text">
                 I am a fresh graduate from our lady of fatima university. I chose this field of study
                 because
@@ -127,8 +126,8 @@
                     <div class="certificaitions-img"> <img src="CERTIFICATIONS/WEBDEV.JPG" alt=""></div>
                 </div>
 
-                <div class="certifications-section" id="certifications">
-                    <div class="certifications-container">
+                <div class="resume-section" id="resume">
+                    <div class="resume-container">
                         <br>
                         <br>
 
@@ -136,7 +135,7 @@
 
                         <div class="certifications">
 
-                            <div class="certificaitions-img">
+                            <div class="resume-img">
                                 <a href="resume/Latest CV.pdf"> <img src="resume/resumee.JPG" alt=""></a>
                             </div>
 
