--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-<br><br><br>
+        <br><br><br>
 
 
         <div class="resume-section" id="resume">
@@ -180,35 +180,43 @@
             <div class="input-container">
 
                 <div class="left">
-                    <form action="/action_page.php">
+                    <form action="https://formspree.io/f/xyyoazzp" method="POST">
+                        <input type="text" id="fname" name="Name" placeholder="Your Name..">
 
-                        <input type="text" id="fname" name="firstname" placeholder="Your Name..">
+                        <input type="text" id="lname" name="Email" placeholder="Your Email">
 
-                        <input type="text" id="lname" name="lastname" placeholder="Your Email">
+                        <input type="text" id="lname" name="Subject" placeholder="Subject">
 
-                        <input type="text" id="lname" name="lastname" placeholder="Subject">
-
-                        <textarea id="subject" name="subject" placeholder="Message" style="height:170px"></textarea>
+                        <textarea name="Message" name="Message" placeholder="Message" style="height:170px"></textarea>
                         <input type="submit" value="Send Message">
 
                     </form>
 
                 </div>
                 <div class="right">
-                    <h2>GET IN TOUCH</h2>
+                    <h11>GET IN TOUCH</h11>
                     <br><br>
-                    <h3>Location:</h3>
-                    <h3>#179, Purok 4, San Jose Magalang Pampanga</h3>
+                    <img src="Contact/add.png" alt="">
+                    <br>
+                    <h13>#179, Purok 4, San Jose Magalang Pampanga</h13>
+                    <br>
+                    <br>
+                    <img src="Contact/call.png" alt="">
+                    <br>
+                    <h14>+639971957790</h14>
+                    <br>
+                    <br>
+                    <img src="Contact/email.png" alt="">
+                    <br>
+                    <h15>alumba1220@gmail.com</h16>
                     <br><br>
-                    <h3>+639971957790</h3>
+                    <h16>FOLLOW ME:</h16>
                     <br><br>
-                    <h3>alumba1220@gmail.com</h3>
-                    <br><br>
-                    <h3>FOLLOW ME:</h3>
                     <a href="https://www.facebook.com/alain.huskar20"> <img src="Contact/fb.png" alt=""></a>
-                    <img src="contact/ig.png" alt="">
-                    <img src="contact/indeed.png" alt="">
-                    <img src="contact/gh.png" alt="">
+                    <a href="https://www.instagram.com/alainlumba/"><img src="contact/ig.png" alt=""></a>
+                    <a href="https://my.indeed.com/resume?hl=en&co=PH&from=gnav-resume--myind"><img
+                            src="contact/indeed.png" alt=""></a>
+                    <a href="https://github.com/alainlumba"><img src="contact/gh.png" alt=""></a>
                 </div>
             </div>
 
